# minihost

./: .gitignore  404.html  CHANGELOG.md  CMakeLists.txt  HOSTING_GUIDE.md  Makefile  README.md  REVIEW.md  TODO.md  index.html  minihost.cpp  minihost.h  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: build.yml
api_c/: index.html
api_python/: index.html
changelog/: index.html
cli/: index.html
dev/260510-review/: index.html
dev/architecture/: index.html
dev/desktop_app/: index.html
dev/desktop_app_todo/: index.html
dev/graph/: index.html
docs/: api_c.md  api_python.md  cli.md  composition.md  getting_started.md  hosting_guide.md  index.md  migration.md  vendored.md
docs/dev/: 260510-review.md  architecture.md  desktop_app.md  desktop_app_todo.md  graph.md
examples/: audio_input.py  auto_tail.py  basic_usage.py  compose.py  parallel_bus.py  play_plugin.py  process_chain.py
getting_started/: index.html
hosting_guide/: index.html
migration/: index.html
projects/example/: CMakeLists.txt  example.c
projects/libminihost/: CMakeLists.txt  minihost.cpp  minihost.h  minihost_chain.cpp  minihost_chain.h  minihost_graph.cpp  minihost_graph.h  minihost_graph_v2.cpp  minihost_graph_v2.h  minihost_graph_v2.hpp  minihost_vstpreset.c  minihost_vstpreset.h
projects/libminihost_audio/: CMakeLists.txt  audio_ringbuffer.cpp  audio_ringbuffer.h  midi_ringbuffer.c  midi_ringbuffer.cpp  midi_ringbuffer.h  minihost_audio.c  minihost_audio.h  minihost_audiofile.c  minihost_audiofile.h  minihost_midi.cpp  minihost_midi.h
projects/libremidi/: CMakeLists.txt  LICENSE.md  README.md
projects/libremidi/include/libremidi/backends/jack/: midi_in.hpp  midi_out.hpp  observer.hpp
projects/libremidi/include/libremidi/backends/pipewire/: midi_in.hpp  observer.hpp
projects/midifile/: CMakeLists.txt  README.md
projects/midifile/patches/: 0001-write-empty-track-guard.patch  README.md
projects/midifile/src/: MidiFile.cpp
projects/midifile/tools/: README.md
projects/midifile/visual-studio/: README.md
projects/minihost_c/: CMakeLists.txt  main.c
projects/minihost_cpp/: CMakeLists.txt  main.cpp
projects/minihost_desktop/: CMakeLists.txt
projects/minihost_desktop/src/: canvas.cpp  canvas.h  live.cpp  live.h  main.cpp  node_registry.cpp  node_registry.h  plugin_scanner.cpp  plugin_scanner.h  project.cpp  project.h  rt_param_queue.h  undo_history.h
projects/tflac/: tflac.c
python/minihost/: CMakeLists.txt  Makefile  README.md  pyproject.toml
python/minihost/src/minihost/: __init__.py  _core.cpp
python/minihost/tests/: test_minihost.py
scripts/: download_juce.py  download_juce.sh
search/: search_index.json
src/minihost/: __init__.py  _async.py  _core.cpp  _core.pyi  audio_io.py  automation.py  chain.py  cli.py  compose.py  control.py  morph.py  plugincache.py  process.py  project.py  render.py  vstpreset.py
tests/: desktop_helpers.py  test_api_version.py  test_asymmetric_channels.py  test_au_descriptor.py  test_audio_buffer_double.py  test_audio_io.py  test_audio_processing.py  test_audiobuffer.py  test_audiobuffer_dsp.py  test_automation.py  test_bwf_metadata.py  test_chain_gc.py  test_chain_mix_and_graph.py  test_channel_validation.py  test_cli.py  test_cli_conformance.py  test_compose.py  test_concurrency.py  test_context_manager.py  test_desktop_autosave.py  test_desktop_pluginscan.py  test_desktop_render_parity.py  test_desktop_smoke.py  test_desktop_undo.py  test_dlpack_interop.py  test_graph_v2.py  test_graph_v2_channels.py  test_graph_v2_midi.py  test_graph_v2_midi_processors.py  test_graph_v2_rt.py  test_in_place_and_session.py  test_midi_mapper.py  test_midi_monitor.py  test_minihost.py  test_morph_native.py  test_numpy_optional.py  test_open_async.py  test_plugincache.py  test_process_audio.py  test_process_audio_extended.py  (+13 more)
tests/tsan/: README.md  ringbuffer_stress.cpp
