[project]
name = "minihost"
version = "0.1.7"
description = "A minimal juce-based plugin host using nanobind"
requires-python = ">=3.10"
dependencies = []
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "Shakeeb Alireza", email = "shakfu@users.noreply.github.com" }
]
keywords = [
    "audiounit",
    "vst3",
    "plugin",
    "dsp",
    "synthesis",
    "music",
    "juce",
    "nanobind",
    "midi",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
# Install with: pip install minihost[numpy]
# Enables numpy-typed APIs: read_audio(as_=np.ndarray),
# render_midi(as_=np.ndarray), AudioBuffer.numpy(), and accepting numpy
# arrays in write_audio / resample / process_audio.
numpy = ["numpy>=1.20"]

[project.scripts]
minihost = "minihost.cli:main"

[project.urls]
Homepage = "https://github.com/shakfu/minihost"
Repository = "https://github.com/shakfu/minihost"
Issues = "https://github.com/shakfu/minihost/issues"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    # numpy is an optional runtime dependency (see [project.optional-dependencies])
    # but a required dev dependency: many tests verify the numpy interop paths
    # (as_=np.ndarray, AudioBuffer.numpy(), np.asarray on AudioBuffer, etc.).
    "numpy>=1.20",
    "pytest>=8.0",
    "ruff>=0.14.14",
    "twine>=6.2.0",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/minihost"]
wheel.exclude = ["**.cpp"]
sdist.include = ["thirdparty/JUCE"]

