[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "minihost"
version = "0.1.0"
description = "A Python extension module built with nanobind"
requires-python = ">=3.9"

[tool.scikit-build]
wheel.packages = ["src/minihost"]

[dependency-groups]
dev = ["pytest>=8.0"]
